[FIX] project: discard unnecessary scrollbar in project form view
Before this commit:

In project module when project form view opens there is a tiny horizontal
scrollbar that doesn't seem necessary.

After this commit:

With this commit, I have fixed this issue and discard unnecessary tiny
horizontal scrollbar in project form view.

task:3508251

--- a/addons/project/static/src/css/project.css
+++ b/addons/project/static/src/css/project.css
@@ -10,5 +10,5 @@
 }
 
 .o_form_project_project  .o_setting_box {
-  margin-left: 1.5rem;
+  padding-left: 1.5rem;
 }
